<resources>
    <string name="app_name">Time of Empire - Check Point</string>
    <string name="navigation_drawer_open">Abrir opciones</string>
    <string name="navigation_drawer_close">Cerrar navegation Dragable</string>
    <string name="nav_header_title">NFC Check Point</string>
    <string name="nav_header_subtitle">developed by williamvaldez@outlook.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Usuarios</string>
    <string name="menu_gallery">Buses</string>
    <string name="menu_slideshow">Empresas</string>
    <string name="menu_tools">Rutas</string>
    <string name="menu_share">Registros</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_settings">Configuraciones</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
