<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_usuarios">

    <fragment
        android:id="@+id/nav_usuarios"
        android:name="sitetech.NFCcheckPoint.ui.usuarios.UsuariosFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/usuarios_fragment" />

    <fragment
        android:id="@+id/nav_empresas"
        android:name="sitetech.NFCcheckPoint.ui.empresas.EmpresasFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/empresas_fragment" />

    <fragment
        android:id="@+id/nav_buses"
        android:name="sitetech.NFCcheckPoint.ui.buses.BusesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/buses_fragment" />

    <fragment
        android:id="@+id/nav_rutas"
        android:name="sitetech.NFCcheckPoint.ui.rutas.RutasFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/rutas_fragment" />

    <fragment
        android:id="@+id/nav_share"
        android:name="sitetech.NFCcheckPoint.ui.historial.HistorialFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/historial_fragment" />

    <fragment
        android:id="@+id/nav_horarios"
        android:name="sitetech.NFCcheckPoint.ui.horarios.HorariosFragment"
        android:label="Horarios"
        tools:layout="@layout/horarios_fragment" />
</navigation>