<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Administracion">
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_usuarios"
                android:icon="@drawable/user"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_empresas"
                android:icon="@drawable/empresa"
                android:title="@string/menu_slideshow" />
            <item
                android:id="@+id/nav_buses"
                android:icon="@mipmap/bus"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_horarios"
                android:icon="@drawable/horario"
                android:title="Horarios" />
            <item
                android:id="@+id/nav_rutas"
                android:icon="@drawable/ruta"
                android:title="@string/menu_tools" />

            <item
                android:id="@+id/nav_dias_festivos"
                android:icon="@drawable/calendario"
                android:title="Dias Festivos" />

        </group>
    </item>

    <item android:title="Historial de registros">
        <menu>
            <item
                android:id="@+id/nav_historial"
                android:icon="@drawable/reports"
                android:title="Historial" />
        </menu>
    </item>

    <item android:title="Configuraciones">
        <menu>
            <item
                android:id="@+id/nav_configuracion"
                android:icon="@drawable/settings2"
                android:title="Configuracion" />
        </menu>
    </item>

</menu>
